# ComputerVision

./: LICENSE  README.md  Train_script.ipynb  detection.ipynb
computer_vision_code/TensorRT-CV/: .gitignore  detection.cpp  detection.h  main.cpp  run.sh
configs/: README.md
models/: README.md
scripts/: README.md  train_script.py  video_parser.py
scripts/camera_feed/: CMakeLists.txt  main.cpp
test_programs/: main.py  test.py
tests/: README.md
